lesson08/errors.txt
Blackjack.java:101: error: cannot find symbol
		char response = Games.askYesNo("\n"+this.name+", do you want a hit? (y/n)", scnr);
		                                                                            ^
  symbol:   variable scnr
  location: class BJ_Player
Blackjack.java:107: error: cannot find symbol
		this.lose();
		    ^
  symbol: method lose()
Blackjack.java:147: error: cannot find symbol
		int size = names.lenth;
		                ^
  symbol:   variable lenth
  location: variable names of type String[]
Blackjack.java:148: error: cannot find symbol
		this.players = new ArrayList<BJ_Players>();
		                             ^
  symbol:   class BJ_Players
  location: class BJ_Game
Blackjack.java:150: error: cannot find symbol
			this.players.add(new BJ_Player(name[i]));
			                               ^
  symbol:   variable name
  location: class BJ_Game
Blackjack.java:152: error: cannot find symbol
		this.dealer = BJ_Dealer("Dealer");
		              ^
  symbol:   method BJ_Dealer(String)
  location: class BJ_Game
Blackjack.java:153: error: cannot find symbol
		this.deck = BJ_Deck();
		            ^
  symbol:   method BJ_Deck()
  location: class BJ_Game
Blackjack.java:171: error: method deal in class Deck cannot be applied to given types;
			this.deck.deal(hit);
			         ^
  required: Hand[],int
  found: BJ_Player[]
  reason: actual and formal argument lists differ in length
Blackjack.java:184: error: incompatible types: ArrayList<BJ_Hand> cannot be converted to Hand[]
		this.deck.deal(list,2);
		               ^
Blackjack.java:206: error: incompatible types: BJ_Dealer cannot be converted to BJ_Player
			this.additionalCards(this.dealer);
			                         ^
Blackjack.java:217: error: cannot find symbol
					if(player.total() > this.dealer.total){
					                               ^
  symbol:   variable total
  location: variable dealer of type BJ_Dealer
Blackjack.java:220: error: cannot find symbol
					else if(player.total() < this.dealer.total){
					                                    ^
  symbol:   variable total
  location: variable dealer of type BJ_Dealer
Blackjack.java:221: error: cannot find symbol
						player.lose();
						      ^
  symbol:   method lose()
  location: variable player of type BJ_Player
Blackjack.java:231: error: cannot find symbol
			player.clear();
			      ^
  symbol:   method clear()
  location: variable player of type BJ_Player
Blackjack.java:233: error: cannot find symbol
		this.dealer.clear();
		           ^
  symbol:   method clear()
  location: variable dealer of type BJ_Dealer
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
15 errors
